# camlton

./: .gitignore  Makefile  README.md  camlton.opam  dune-project  実装方針.md
.github/workflows/: blank.yml
doc/: doc-ja.md
example/: example1.json
src/: .merlin  camlton.ml  camlton.mli  dune  error.ml  error.mli  main.ml  optionState.ml  optionState.mli  readJson.ml  readJson.mli
test/: 1.json  2.json  3.json
